tests/snapshots/integration__compgen__choice_slash.snap
---
source: tests/compgen.rs
expression: data
---
************ COMPGEN `prog cmd a\b ` ************
a\b	/color:default
