tests/snapshots/integration__compgen__cmd_aliases.snap
---
source: tests/compgen.rs
expression: data
---
************ COMPGEN `prog ` ************
abc 
ab 
help
