tests/snapshots/integration__compgen__color.snap
---
source: tests/compgen.rs
expression: data
---
************ COMPGEN Bash `prog ` ************
kindFlag
kindOption
kindCommand
kindDir
kindFile
kindFileExe
kindSymlink
kindValue
colorBlack
colorBlackBold
colorRed
colorRedBold
colorGreen
colorGreenBold
colorYellow
colorYellowBold
colorBlue
colorBlueBold
colorMagenta
colorMagentaBold
colorCyan
colorCyanBold
colorWhite
colorWhiteBold
colorDefault
colorDefaultBold

************ COMPGEN Fish `prog ` ************
kindFlag
kindOption
kindCommand
kindDir
kindFile
kindFileExe
kindSymlink
kindValue
colorBlack
colorBlackBold
colorRed
colorRedBold
colorGreen
colorGreenBold
colorYellow
colorYellowBold
colorBlue
colorBlueBold
colorMagenta
colorMagentaBold
colorCyan
colorCyanBold
colorWhite
colorWhiteBold
colorDefault
colorDefaultBold

************ COMPGEN Nushell `prog ` ************
kindFlag
kindOption
kindCommand
kindDir
kindFile
kindFileExe
kindSymlink
kindValue
colorBlack
colorBlackBold
colorRed
colorRedBold
colorGreen
colorGreenBold
colorYellow
colorYellowBold
colorBlue
colorBlueBold
colorMagenta
colorMagentaBold
colorCyan
colorCyanBold
colorWhite
colorWhiteBold
colorDefault
colorDefaultBold

************ COMPGEN Powershell `prog ` ************
kindFlag	0	kindFlag		36
kindOption	0	kindOption		1;36
kindCommand	0	kindCommand		35
kindDir	0	kindDir		1;34
kindFile	0	kindFile		39
kindFileExe	0	kindFileExe		1;32
kindSymlink	0	kindSymlink		1;36
kindValue	0	kindValue		32
colorBlack	0	colorBlack		30
colorBlackBold	0	colorBlackBold		1;30
colorRed	0	colorRed		31
colorRedBold	0	colorRedBold		1;31
colorGreen	0	colorGreen		32
colorGreenBold	0	colorGreenBold		1;32
colorYellow	0	colorYellow		33
colorYellowBold	0	colorYellowBold		1;33
colorBlue	0	colorBlue		34
colorBlueBold	0	colorBlueBold		1;34
colorMagenta	0	colorMagenta		35
colorMagentaBold	0	colorMagentaBold		1;35
colorCyan	0	colorCyan		36
colorCyanBold	0	colorCyanBold		1;36
colorWhite	0	colorWhite		37
colorWhiteBold	0	colorWhiteBold		1;37
colorDefault	0	colorDefault		39
colorDefaultBold	0	colorDefaultBold		1;39

************ COMPGEN Zsh `prog ` ************
kindFlag	kindFlag	kindFlag	36
kindOption	kindOption	kindOption	1;36
kindCommand	kindCommand	kindCommand	35
kindDir	kindDir	kindDir	1;34
kindFile	kindFile	kindFile	39
kindFileExe	kindFileExe	kindFileExe	1;32
kindSymlink	kindSymlink	kindSymlink	1;36
kindValue	kindValue	kindValue	32
colorBlack	colorBlack	colorBlack	30
colorBlackBold	colorBlackBold	colorBlackBold	1;30
colorRed	colorRed	colorRed	31
colorRedBold	colorRedBold	colorRedBold	1;31
colorGreen	colorGreen	colorGreen	32
colorGreenBold	colorGreenBold	colorGreenBold	1;32
colorYellow	colorYellow	colorYellow	33
colorYellowBold	colorYellowBold	colorYellowBold	1;33
colorBlue	colorBlue	colorBlue	34
colorBlueBold	colorBlueBold	colorBlueBold	1;34
colorMagenta	colorMagenta	colorMagenta	35
colorMagentaBold	colorMagentaBold	colorMagentaBold	1;35
colorCyan	colorCyan	colorCyan	36
colorCyanBold	colorCyanBold	colorCyanBold	1;36
colorWhite	colorWhite	colorWhite	37
colorWhiteBold	colorWhiteBold	colorWhiteBold	1;37
colorDefault	colorDefault	colorDefault	39
colorDefaultBold	colorDefaultBold	colorDefaultBold	1;39
