tests/snapshots/integration__compgen__compgen_choice_fn.snap
---
source: tests/compgen.rs
expression: output
---
RUN
cmd_option_names --op11 

STDOUT
__argc_fn:_fn_bars

STDERR


