tests/snapshots/integration__compgen__compgen_choice_fns.snap
---
source: tests/compgen.rs
expression: output
---
RUN
cmd_option_names --op10 

STDOUT
a1
a2
a3

STDERR


