tests/snapshots/integration__compgen__compgen_cmd_no_args.snap
---
source: tests/compgen.rs
expression: output
---
RUN
cmd_without_any_arg 

STDOUT
__argc_comp:file

STDERR


