tests/snapshots/integration__compgen__compgen_combine_shorts.snap
---
source: tests/compgen.rs
expression: output
---
RUN
cmd_combine_shorts -a

STDOUT
-ab
-ac

STDERR


