tests/snapshots/integration__compgen__compgen_combine_shorts1.snap
---
source: tests/compgen.rs
expression: output
---
RUN
cmd_combine_shorts -ab

STDOUT
-abc

STDERR


